zoom to markers when choosing day

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
   <nav class="light-blue lighten-1" role="navigation" ng-controller="NavController">
     <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo"><img src="images/logo.png"</a>
         <ul class="right">
           <li><a ng-hide="loggedin" href="#/login">Login</a></li>
           <li><a ng-hide="loggedin" href="#/register">Register</a></li>
