--- a/app/scripts/maps/map.home.tpl.html
+++ b/app/scripts/maps/map.home.tpl.html
@@ -20,13 +20,16 @@
   <!-- <div class="container">
     <div class="section"> -->
  <!-- <div id="map"></div> -->
-  <div id="map_canvas" ng-controller="MapController">
+ <div ng-controller="MapController"></div>
+  <div id="map_canvas">
+  <p>{{ map }}</p>
 
  <!-- Add map to page -->
-      <ui-gmap-google-map center='map.center' zoom='map.zoom' draggable='true' options="options" bounds='map.bounds'>
+      <ui-gmap-google-map center='map.center' zoom='map.zoom' draggable='false' options="options" bounds='map.bounds'>
    <!-- Add markers to page -->
-        <ui-gmap-markers models="xtrackMarkers" idKey="id" coords="'coords'" icon="'icon'">
+        <ui-gmap-markers models="trackMarkers" idKey="id" coords="'coords'" icon="'icon'">
         </ui-gmap-markers>
+
 
         <ui-gmap-polyline ng-repeat="p in polylines" path="p.path" stroke="p.stroke" visible='p.visible' geodesic='p.geodesic' fit="false" editable="p.editable" draggable="p.draggable" icons='p.icons'></ui-gmap-polyline>
 
@@ -43,6 +46,8 @@
         <span>{{d.startTime.iso}}</span>
       </li>  
     </ul>
+
+  </div>
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
