--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,14 @@
 
   <nav class="light-blue lighten-1" role="navigation" ng-controller="NavController">
     <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo"><img src="images/logo.png"</a>
+      <div class="nav-wrapper"><a id="logo-container" href="#/" class="brand-logo"><img src="images/logo.png"</a>
         <ul class="right">
+          <li><a ng-show="loggedin" href="#/home">View Days</a></li>
+          <li><a ng-show="loggedin" href="#/create">Create Day</a></li>
+          <li><a ng-show="loggedin" href="#/home">Share Day</a></li>
+          <li><a ng-show="loggedin" href="#/photos">Photos</a></li>
+          <li><a ng-show="loggedin" href="#/mobile">Mobile</a></li>
+       
           <li><a ng-hide="loggedin" href="#/login">Login</a></li>
           <li><a ng-hide="loggedin" href="#/register">Register</a></li>
           <li><a ng-show="loggedin" href="#/" ng-click="logout()">Logout</a></li>
@@ -94,6 +100,8 @@
   
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+
+    <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
 
     <!-- Materialize.css bower components -->
@@ -108,7 +116,6 @@
 
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="../bower_components/lodash/dist/lodash.min.js"></script>
-
    
     <!-- endbower -->
     <!-- endbuild -->
