--- a/app/scripts/tracks/track.mobile.tpl.html
+++ b/app/scripts/tracks/track.mobile.tpl.html
@@ -1,7 +1,7 @@
 <!-- <div class="section no-pad-bot" id="index-banner"> -->
     <div class="container">
       
-      <h1 class="header center orange-text">Map My Day</h1>
+      <!-- <h1 class="header center orange-text">Map My Day</h1> -->
       <div class="row center">
         <h5 class="header col s12 light">Map your day. Review your day. Share your day. </h5>
       </div>
