--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 
    <!--  <script src='http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language=en&v=3.17'></script> -->
    <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
+   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>
 
 
     <script src="../bower_components/moment/moment.js"></script>
@@ -134,6 +135,10 @@
 
         <script src="scripts/maps/map.controller.js"></script>
         <script src="scripts/maps/map.factory.js"></script>
+
+        <script src="scripts/cmaps/cmap.controller.js"></script>
+        <script src="scripts/cmaps/cmap.factory.js"></script>
+
 
 
         <script src="scripts/layout/nav.controller.js"></script>
