--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ng-app="DayMap">
   <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>mapmat</title>
@@ -22,7 +23,7 @@
 
   <nav class="light-blue lighten-1" role="navigation" ng-controller="NavController">
     <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="#/" class="brand-logo"><img src="images/logo.png"</a>
+      <div class="nav-wrapper"><a id="logo-container" href="#/" class="brand-logo"><img src="images/logo2.png"</a>
         <ul class="right">
           <li><a ng-show="loggedin" href="#/home">View Days</a></li>
           <li><a ng-show="loggedin" href="#/create">Create Day</a></li>
@@ -102,8 +103,13 @@
 
    <!--  <script src='http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language=en&v=3.17'></script> -->
    <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
+   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>
 
+   
+    <script src="../bower_components/Chart.js/Chart.js"></script>
+
+    <script src="../bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -119,6 +125,9 @@
     <script src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
 
     <script src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
+    <script src="//maps.google.com/maps/api/js"></script>
+<script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
     <script src="../bower_components/lodash/dist/lodash.min.js"></script>
    
     <!-- endbower -->
