--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       <div class="nav-wrapper"><a id="logo-container" href="#/" class="brand-logo"><img src="images/logo2.png"</a>
         <ul class="right">
           <li><a ng-show="loggedin" href="#/home">View Days</a></li>
-          <li><a ng-show="loggedin" href="#/create">Create Day</a></li>
+          <li><a ng-show="loggedin" href="#/profile">Profile</a></li>
           <li><a ng-show="loggedin" href="#/home">Share Day</a></li>
           <li><a ng-show="loggedin" href="#/photos">Photos</a></li>
           <li><a ng-show="loggedin" href="#/mobile">Mobile</a></li>
@@ -107,7 +107,7 @@
    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>
 
    
-    <script src="../bower_components/Chart.js/Chart.js"></script>
+    
 
     <script src="../bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 
@@ -129,12 +129,19 @@
     <script src="//maps.google.com/maps/api/js"></script>
 <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
     <script src="../bower_components/lodash/dist/lodash.min.js"></script>
+
+    <script src="../bower_components/Chart.js/Chart.js"></script>
+
    
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
+
+        <script src="scripts/charts/chart.controller.js"></script>
+        <script src="scripts/charts/chart.factory.js"></script>
+
 
         <script src="scripts/tracks/track.controller.js"></script>
         <script src="scripts/tracks/track.factory.js"></script>
@@ -144,9 +151,6 @@
 
         <script src="scripts/maps/map.controller.js"></script>
         <script src="scripts/maps/map.factory.js"></script>
-
-        <script src="scripts/cmaps/cmap.controller.js"></script>
-        <script src="scripts/cmaps/cmap.factory.js"></script>
 
 
 
