--- a/app/index.html
+++ b/app/index.html
@@ -21,14 +21,14 @@
   </head>
   <body>
 
-  <nav class="light-blue lighten-1" role="navigation" ng-controller="NavController">
+  <nav class="navBarMain" role="navigation" ng-controller="NavController">
     <div class="container">
       <div class="nav-wrapper"><a id="logo-container" href="#/" class="brand-logo"><img src="images/logo2.png"</a>
         <ul class="right">
           <li><a ng-show="loggedin" href="#/home">View Days</a></li>
           <li><a ng-show="loggedin" href="#/profile">Profile</a></li>
-          <li><a ng-show="loggedin" href="#/home">Share Day</a></li>
-          <li><a ng-show="loggedin" href="#/photos">Photos</a></li>
+          <li><a ng-show="loggedin" href="#/shared">Shared Days</a></li>
+          <!-- <li><a ng-show="loggedin" href="#/photos">Photos</a></li> -->
           <li><a ng-show="loggedin" href="#/mobile">Mobile</a></li>
           <li><a ng-hide="loggedin" href="#/login">Login</a></li>
           <li><a ng-hide="loggedin" href="#/register">Register</a></li>
@@ -60,7 +60,7 @@
 
 
 
-  <footer class="page-footer orange">
+  <footer class="pageFooterMain">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -151,6 +151,9 @@
 
         <script src="scripts/maps/map.controller.js"></script>
         <script src="scripts/maps/map.factory.js"></script>
+
+        <script src="scripts/sharedMaps/shared.controller.js"></script>
+        <script src="scripts/sharedMaps/shared.factory.js"></script>
 
 
 
